@@ -2736,15 +2736,56 @@ static char loadIntoMapFromFile( FILE *inFile,
            Time::getCurrentTime() < startTime + inTimeLimitSec ) {
         
         TestMapRecord r;
-                
-        char stringBuff[1000];
-                
-        int numRead = fscanf( inFile, "%d %d %d %d %999s", 
+        
+
+        // read a string of arbitrary length (container with an unknown
+        // number of slots)
+        // Old code used a static buffer of 1000 for this, but
+        // that will fail for longer strings
+        //
+        // For reference, old format string for scanf was "%d %d %d %d %999s"
+
+
+        // read ints first
+        int numRead = fscanf( inFile, "%d %d %d %d", 
                               &(r.x), &(r.y), &(r.biome),
-                              &(r.floor),
-                              stringBuff );
-                
-        if( numRead != 5 ) {
+                              &(r.floor) );
+        
+        if( numRead != 4 ) {
+            moreFileLeft = false;
+            break;
+            }
+        
+        // now skip string and measure position to get max length
+        int posBeforeString = ftell( inFile );
+        
+        // skip string
+        fscanf( inFile, "%*s" );
+
+        int posAfterString = ftell( inFile );
+        
+        // now we know how long string is
+        int stringLength = posAfterString - posBeforeString;
+        
+        if( stringLength <= 0 ) {
+            moreFileLeft = false;
+            break;
+            }
+
+        char *stringBuff = new char[ stringLength + 1 ];
+        
+        // rewind file to scan string
+        fseek( inFile, posBeforeString, SEEK_SET );
+        
+        char *formatString = autoSprintf( "%%%ds", stringLength );
+
+        numRead = fscanf( inFile, formatString, stringBuff );
+        
+        delete [] formatString;
+        
+
+        if( numRead != 1 ) {
+            delete [] stringBuff;
             moreFileLeft = false;
             break;
             }
@@ -2755,6 +2796,9 @@ static char loadIntoMapFromFile( FILE *inFile,
                 
         char **slots = split( stringBuff, ",", &numSlots );
                 
+        delete [] stringBuff;
+
+
         for( int i=0; i<numSlots; i++ ) {
                     
             if( i == 0 ) {
